force-app/main/default/objects/SFDC_Class__c/fields/Class_assigned_to_Instructor_Id1__c.field-meta.xml
<CustomField>
    <fullName>Class_assigned_to_Instructor_Id1__c</fullName>
    <label>Class assigned to Instructor Id1 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>