force-app/main/default/objects/SFDC_Class__c/fields/Class_type__c.field-meta.xml
<CustomField>
    <fullName>Class_type__c</fullName>
    <label>Instructor 1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>