force-app/main/default/objects/SFDC_Class__c/fields/Classes_assigned_to_Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Classes_assigned_to_Instructor_2__c</fullName>
    <label># Classes assigned to Instructor 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>