force-app/main/default/objects/SFDC_Class__c/fields/Competency_Dup_Check__c.field-meta.xml
<CustomField>
    <fullName>Competency_Dup_Check__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Competency Dup Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>