force-app/main/default/objects/SFDC_Class__c/fields/Duplication_Avoider__c.field-meta.xml
<CustomField>
    <fullName>Duplication_Avoider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplication Avoider</label>
    <type>Checkbox</type>
</CustomField>