force-app/main/default/objects/SFDC_Class__c/fields/Instructor_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_ID_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor ID 2</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipLabel>Classes (As Instructor 2)</relationshipLabel>
    <relationshipName>Classes1</relationshipName>
    <type>Lookup</type>
</CustomField>