force-app/main/default/objects/SFDC_Class__c/fields/Instructor_Id_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Id_2_Type__c</fullName>
    <label>Instructor 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>