force-app/main/default/objects/SFDC_Class__c/fields/Instructor_ID__c.field-meta.xml
<CustomField>
    <fullName>Instructor_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor ID 1</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipLabel>Classes (As Instructor 1)</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>