force-app/main/default/objects/SFDC_Class__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1 - Jan - Mar</fullName>
            </value>
            <value>
                <fullName>Q2 - Apr - Jun</fullName>
            </value>
            <value>
                <fullName>Q3 - Jul - Sep</fullName>
            </value>
            <value>
                <fullName>Q4 - Oct - Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>