force-app/main/default/objects/SFDC_Class__c/fields/This_Record_Created_By_Name_And_Time__c.field-meta.xml
<CustomField>
    <fullName>This_Record_Created_By_Name_And_Time__c</fullName>
    <formula>CreatedBy.Username + TEXT( TIMENOW() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Record Created By Name And Time</label>
    <type>Text</type>
</CustomField>